Verificacion para mejorar la performance 01072025

--- a/PracticaJWTcore/appsettings.json
+++ b/PracticaJWTcore/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-JUFB9LAM\\MSSQLSERVER2022;Database=ApiProyecto;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DEVELOPERDDS005\\MSSQLSERVER2022;Database=ApiProyecto;Integrated Security=True;TrustServerCertificate=True;"
   },
   "JWT": {
     "Key": "ClaveSecretaJWT"
