--- a/PracticaJWTcore/PracticaJWTcore.csproj
+++ b/PracticaJWTcore/PracticaJWTcore.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="Dtos\CustomerEntities.cs" />
+    <None Include="Dtos\Customer.cs" />
   </ItemGroup>
 
   <ItemGroup>
